@@ -479,7 +479,7 @@ Web Object Metadata
 
 **sos_encoding_blockSeparator**
 
-- *Description:* (Optional) For GetObservation requests using resultModel=om:Observation (SWE DataBlock encoding).  Record separator to be used.  Default is '@@'
+- *Description:* (Optional) For GetObservation requests using resultModel=om:Observation (SWE DataBlock encoding).  Record separator to be used.  Default is '\\n'
 
 **sos_encoding_tokenSeparator**
 
